--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -1,3 +1,14 @@
+/* header */
+
+h1 {
+	font-size: 250%;
+
+	display: inline-block;
+	border-bottom: 3px solid #2980b9;
+}
+
+/* content */
+
 .rst-content p.rubric {
 	font-size: 125%;
 }
